--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,8 @@
         }
     },
     "require": {
-        "php": "^7.4"
+        "php": "^7.4",
+        "doctrine/orm": "^2.8",
+        "symfony/dependency-injection": "^5.0"
     }
 }
