--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
     "require": {
         "php": "^7.4",
         "doctrine/orm": "^2.7",
+        "mediagone/doctrine-specifications": "^0.1",
         "symfony/dependency-injection": "^5.0"
     },
     "require-dev": {
