--- a/composer.json
+++ b/composer.json
@@ -23,13 +23,13 @@
     "require": {
         "php": "^7.4|^8.0",
         "doctrine/orm": "^2.7",
-        "mediagone/doctrine-specifications": "^0.2",
+        "mediagone/doctrine-specifications": "^0.3",
         "symfony/dependency-injection": "^5.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0"
     },
     "scripts": {
-        "phpunit": "phpunit -c phpunit.xml.dist --testsuite Unit_Tests"
+        "tests": "phpunit -c phpunit.xml.dist --testsuite Unit_Tests"
     }
   }
