--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     "require": {
         "php": "^7.4|^8.0",
         "doctrine/orm": "^2.7",
-        "mediagone/doctrine-specifications": "^0.3",
+        "mediagone/doctrine-specifications": "^0.3|^0.4",
         "symfony/dependency-injection": "^5.0"
     },
     "require-dev": {
