--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "php": "^7.4|^8.0",
         "doctrine/orm": "^2.7",
         "mediagone/doctrine-specifications": "^0.3|^0.4",
-        "symfony/dependency-injection": "^5.0"
+        "symfony/dependency-injection": "^5.0|^6.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0"
