--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     },
     "require": {
         "php": "^7.4|^8.0",
-        "doctrine/orm": "^2.7",
+        "doctrine/orm": "^2.7|^3.0",
         "mediagone/doctrine-specifications": "^0.3|^0.4|^0.5",
         "symfony/dependency-injection": "^5.0|^6.0"
     },
